test: Add integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ whitelist_externals = poetry
 [testenv:pytest]
 # Run the python tests.
 # To execute, run `tox -e pytest`
-passenv = TAP_CHECKLY_TOKEN,TAP_CHECKLY_START_DATE
+passenv = TAP_CHECKLY_*
 envlist = py37, py38, py39, py310
 commands =
     poetry install -v
