--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,7 @@ jobs:
 
     - name: Run lint command from tox.ini
       env:
+        TAP_CHECKLY_ACCOUNT_ID: ${{ secrets.TAP_CHECKLY_ACCOUNT_ID }}
         TAP_CHECKLY_TOKEN: ${{ secrets.TAP_CHECKLY_TOKEN }}
         TAP_CHECKLY_START_DATE: ${{ secrets.TAP_CHECKLY_START_DATE }}
       run: |
