--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ documentation = "https://github.com/edgarrmondragon/tap-checkly#readme"
 python = "<3.11,>=3.7.1"
 singer-sdk = "0.11.1"
 
+# TODO: Remove this dependency once the SDK is updated to include the latest
+importlib-resources = {version = "^5.9.0", markers = "python_version < \"3.9\""}
+
 [tool.poetry.dev-dependencies]
 mypy = ">=0.950"
 pytest = "^7.1.2"
