--- a/meltano.yml
+++ b/meltano.yml
@@ -3,13 +3,13 @@ send_anonymous_usage_stats: false
 project_id: tap-checkly
 environments:
 - name: dev
+default_environment: dev
 plugins:
   extractors:
   - name: tap-checkly
-    label: Checkly
     namespace: checkly
+    label: Checkly
     description: Delightful Active Monitoring for Developers
-    repository: https://github.com/edgarrmondragon/tap-checkly
     docs: https://github.com/edgarrmondragon/tap-checkly#readme
     pip_url: -e .
     capabilities:
@@ -29,7 +29,16 @@ plugins:
       description: Earliest datetime to get data from
     config:
       start_date: "2022-10-11"
+    repo: https://github.com/edgarrmondragon/tap-checkly
+    select:
+    - "!alert_notifications.*"
   loaders:
   - name: target-jsonl
     variant: andyh1203
     pip_url: target-jsonl
+  - name: target-duckdb
+    variant: jwills
+    pip_url: target-duckdb~=0.4
+    config:
+      filepath: output/wh.duckdb
+      default_target_schema: ${MELTANO_ENVIRONMENT}_${MELTANO_EXTRACTOR_NAMESPACE}
