--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,23 +3,27 @@ name: Test tap-checkly
 on: [push]
 
 jobs:
-  linting:
+  tests:
     runs-on: ubuntu-latest
     env:
-      SETUPTOOLS_USE_DISTUTILS: stdlib
       PIP_CONSTRAINT: .github/workflows/constraints.txt
+      NOXSESSION: ${{ matrix.session }}-${{ matrix.python-version }}
+      FORCE_COLOR: "1"
     strategy:
       matrix:
         include:
         - {python-version: "3.10", session: "mypy"}
-        - {python-version: "3.10", session: "pytest"}
-        - {python-version: "3.9", session: "pytest"}
-        - {python-version: "3.8", session: "pytest"}
-        - {python-version: "3.7", session: "pytest"}
+        - {python-version: "3.11", session: "tests"}
+        - {python-version: "3.10", session: "tests"}
+        - {python-version: "3.9", session: "tests"}
+        - {python-version: "3.8", session: "tests"}
+        - {python-version: "3.7", session: "tests"}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3.1.0
+      with:
+        fetch-depth: 0
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4.3.0
@@ -34,18 +38,20 @@ jobs:
     - name: Install Poetry
       run: |
         pipx install poetry
+        pipx inject poetry poetry-dynamic-versioning[plugin]
         poetry --version
+        poetry self show plugins
 
-    - name: Install tox
+    - name: Install Nox
       run: |
-        pipx install tox
-        pipx inject tox tox-poetry
-        tox --version
+        pipx install nox
+        pipx inject nox nox-poetry
+        nox --version
 
-    - name: Run lint command from tox.ini
+    - name: Run Nox
       env:
         TAP_CHECKLY_ACCOUNT_ID: ${{ secrets.TAP_CHECKLY_ACCOUNT_ID }}
         TAP_CHECKLY_TOKEN: ${{ secrets.TAP_CHECKLY_TOKEN }}
         TAP_CHECKLY_START_DATE: ${{ secrets.TAP_CHECKLY_START_DATE }}
       run: |
-        tox -e ${{ matrix.session }}
+        nox
