--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,11 +13,19 @@ repos:
     exclude: "plugins/.*/.*\\.lock"
   - id: trailing-whitespace
 
-- repo: https://github.com/asottile/pyupgrade
-  rev: v3.3.1
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: 'v0.0.255'
   hooks:
-  - id: pyupgrade
-    args: [--py36-plus]
+  - id: ruff
+    args: [--fix, --exit-non-zero-on-fix]
+
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.1.1
+  hooks:
+  - id: mypy
+    pass_filenames: true
+    additional_dependencies:
+    - types-requests
 
 - repo: https://github.com/psf/black
   rev: "23.1.0"
@@ -38,8 +46,3 @@ repos:
     - flake8-annotations
     - flake8-docstrings
     exclude: "noxfile\\.py"
-
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.0.255
-  hooks:
-    - id: ruff
