--- a/.github/workflows/dynamic-publish.yaml
+++ b/.github/workflows/dynamic-publish.yaml
@@ -4,6 +4,9 @@ on:
   release:
     types: [published]
 
+permissions:
+  id-token: write
+
 jobs:
   publish:
     name: Publish to PyPI
@@ -46,6 +49,3 @@ jobs:
 
       - name: Publish
         uses: pypa/gh-action-pypi-publish@v1.8.5
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
