--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,11 +13,11 @@ repos:
     exclude: "plugins/.*/.*\\.lock"
   - id: trailing-whitespace
 
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: 'v0.0.269'
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: 'v0.0.270'
   hooks:
   - id: ruff
-    args: [--fix, --exit-non-zero-on-fix]
+    args: [--fix, --exit-non-zero-on-fix, --show-fixes]
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.3.0
@@ -32,17 +32,10 @@ repos:
   hooks:
   - id: black
 
-- repo: https://github.com/pycqa/isort
-  rev: 5.12.0
-  hooks:
-  - id: isort
-
 - repo: https://github.com/pycqa/flake8
   rev: 6.0.0
   hooks:
   - id: flake8
     additional_dependencies:
     - darglint
-    - flake8-annotations
-    - flake8-docstrings
     exclude: "noxfile\\.py"
