--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,9 @@ line-length = 88
 select = ["ALL"]
 src = ["tap_checkly", "tests"]
 target-version = "py37"
+unfixable = [
+  "ERA001",  # commented-out-code
+]
 
 [tool.ruff.per-file-ignores]
 "noxfile.py" = ["ANN", "INP001"]
