--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,17 +22,6 @@ singer-sdk = ">=0.14,<0.28"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3 # Vertical Hanging Indent
-use_parentheses = true
-include_trailing_comma = true
-src_paths = "tap_checkly"
-known_first_party = "tap_checkly"
-add_imports = [
-  "from __future__ import annotations",
-]
-
 [tool.pytest.ini_options]
 addopts = "-vvv"
 
@@ -71,7 +60,8 @@ vcs = "git"
 
 [tool.ruff]
 ignore = [
-  "ANN101",
+  "ANN101", # missing-type-self
+  "DJ",     # flake8-django
 ]
 line-length = 88
 select = ["ALL"]
@@ -81,16 +71,17 @@ unfixable = [
   "ERA001",  # commented-out-code
 ]
 
+[tool.ruff.isort]
+known-first-party = ["tap_checkly"]
+required-imports = ["from __future__ import annotations"]
+
 [tool.ruff.per-file-ignores]
 "noxfile.py" = ["ANN", "INP001"]
 "tests/*" = [
-  "ANN201",
-  "S101",
+  "ANN201",  # missing-return-type-public-function
+  "S101",    # assert
+  "SLF001",  # private-member-access
 ]
 
 [tool.ruff.pydocstyle]
 convention = "google"
-
-[tool.ruff.isort]
-known-first-party = ["tap_checkly"]
-required-imports = ["from __future__ import annotations"]
