--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
   - package-ecosystem: pip
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
       timezone: "America/Mexico_City"
       time: "07:00"
     reviewers:
@@ -19,7 +19,7 @@ updates:
   - package-ecosystem: pip
     directory: "/.github/workflows"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
       timezone: "America/Mexico_City"
       time: "07:00"
     reviewers:
@@ -29,7 +29,7 @@ updates:
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
       timezone: "America/Mexico_City"
       time: "07:00"
     reviewers:
