--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ module = ["backoff.*"]
 [build-system]
 build-backend = "poetry.core.masonry.api"
 requires = [
-  "poetry-core<2,>=1",
+  "poetry-core==1.7.0",
+  "poetry-dynamic-versioning",
 ]
 
 [tool.poetry.scripts]
