--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ keywords = [
 ]
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.8"
+python = ">=3.8,<4,"
 singer-sdk = "~=0.32.0"
 
 [tool.poetry.group.dev.dependencies]
