--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ singer-sdk = "~=0.32.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
+singer-sdk = { version = "~=0.32.0", extras = ["testing"] }
 
 [tool.pytest.ini_options]
 addopts = "-vvv"
