--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,12 @@ keywords = [
 ]
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.8"
+python = ">=3.8,<4,"
 singer-sdk = "~=0.32.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
+singer-sdk = { version = "~=0.32.0", extras = ["testing"] }
 
 [tool.pytest.ini_options]
 addopts = "-vvv"
