--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4,"
-singer-sdk = ">=0.32,<0.34"
+singer-sdk = "~=0.33.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
