--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ python = ">=3.8,<4,"
 singer-sdk = "~=0.33.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.2"
-singer-sdk = { version = ">=0.32,<0.34", extras = ["testing"] }
+pytest = "~=7.4"
+singer-sdk = { version = "~=0.33.0", extras = ["testing"] }
 
 [tool.pytest.ini_options]
 addopts = "-vvv"
@@ -61,23 +61,27 @@ style = "pep440"
 vcs = "git"
 
 [tool.ruff]
+line-length = 88
+src = ["tap_checkly", "tests"]
+target-version = "py38"
+
+[tool.ruff.lint]
 ignore = [
   "ANN101", # missing-type-self
   "DJ",     # flake8-django
+  "COM812",  # missing-trailing-comma
+  "ISC001",  # single-line-implicit-string-concatenation
 ]
-line-length = 88
 select = ["ALL"]
-src = ["tap_checkly", "tests"]
-target-version = "py38"
 unfixable = [
   "ERA001",  # commented-out-code
 ]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["tap_checkly"]
 required-imports = ["from __future__ import annotations"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "noxfile.py" = ["ANN", "INP001"]
 "tests/*" = [
   "ANN201",  # missing-return-type-public-function
@@ -85,5 +89,5 @@ required-imports = ["from __future__ import annotations"]
   "SLF001",  # private-member-access
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
