packaging: Use Hatch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,64 +1,73 @@
-[tool.poetry]
+[build-system]
+build-backend = "hatchling.build"
+requires = [
+  "hatch-vcs",
+  "hatchling",
+]
+
+[project]
 name = "tap-checkly"
-version = "0.0.0"
 description = "Singer tap for Checkly, built with the Meltano SDK for Singer Taps."
-license = "Apache-2.0"
-authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
-maintainers = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
 readme = "README.md"
-homepage = "https://github.com/edgarrmondragon/tap-checkly"
-repository = "https://github.com/edgarrmondragon/tap-checkly"
-documentation = "https://github.com/edgarrmondragon/tap-checkly/#readme"
 keywords = [
+  "Checkly",
   "ELT",
   "singer.io",
-  "Checkly",
 ]
-
-[tool.poetry.dependencies]
-python = ">=3.8,<4,"
-singer-sdk = "~=0.34.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "~=7.4"
-singer-sdk = { version = "~=0.34.0", extras = ["testing"] }
-
-[tool.pytest.ini_options]
-addopts = "-vvv"
-
-[tool.mypy]
-python_version = "3.10"
-warn_unused_configs = true
-
-[[tool.mypy.overrides]]
-ignore_missing_imports = true
-module = ["backoff.*"]
-
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = [
-  "poetry-core==1.7",
-  "poetry-dynamic-versioning",
+license = "Apache-2.0"
+maintainers = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
+authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
+requires-python = ">=3.8"
+classifiers = [
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
 ]
+dynamic = [
+  "version",
+]
+dependencies = [
+  'importlib-resources; python_version < "3.9"',
+  "singer-sdk~=0.34.0",
+]
+optional-dependencies.dev = [
+  "singer-sdk[testing,typing]",
+]
+optional-dependencies.testing = [
+  "deptry>=0.12",
+  "pytest~=7.4",
+  "singer-sdk[testing]~=0.34.0",
+]
+optional-dependencies.typing = [
+  "mypy",
+  "types-requests",
+]
+urls.documentation = "https://github.com/edgarrmondragon/tap-checkly/#readme"
+urls.homepage = "https://github.com/edgarrmondragon/tap-checkly"
+urls.repository = "https://github.com/edgarrmondragon/tap-checkly"
+scripts."tap-checkly" = "tap_checkly.tap:TapCheckly.cli"
 
-[tool.poetry.scripts]
-# CLI declaration
-"tap-checkly" = "tap_checkly.tap:TapCheckly.cli"
+[tool.hatch.version]
+source = "vcs"
 
-[tool.poetry-dynamic-versioning]
-enable = true
-format-jinja = """
-    {%- if distance == 0 -%}
-        {{ serialize_pep440(base, stage, revision) }}
-    {%- elif revision is not none -%}
-        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
-    {%- else -%}
-        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
-    {%- endif -%}
-"""
-metadata = true
-style = "pep440"
-vcs = "git"
+[tool.hatch.envs.sync.scripts]
+console = "tap-checkly {args}"
+jsonl = "tap-checkly {args} > tap-checkly.jsonl"
+
+[tool.hatch.envs.test]
+features = ["testing"]
+[tool.hatch.envs.test.scripts]
+integration = "pytest {args:tests}"
+dependencies = "deptry ."
+
+[tool.hatch.envs.typing]
+features = ["testing", "typing"]
+[tool.hatch.envs.typing.scripts]
+check = "mypy --strict {args:tap_checkly tests}"
 
 [tool.ruff]
 line-length = 88
@@ -91,3 +100,29 @@ required-imports = ["from __future__ import annotations"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.deptry.package_module_name_map]
+importlib-resources = "importlib_resources"
+mypy = "mypy"
+types-requests = "requests"
+
+[tool.deptry.per_rule_ignores]
+DEP002 = [
+  "deptry",
+  "mypy",
+  "pytest",
+]
+
+[tool.pytest.ini_options]
+addopts = "-vvv"
+
+[tool.mypy]
+python_version = "3.12"
+warn_redundant_casts = true
+warn_unreachable = true
+warn_unused_configs = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+ignore_missing_imports = true
+module = ["backoff.*"]
