--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,6 @@ on:
     paths:
       - tap_checkly/**
       - tests/**
-      - noxfile.py
-      - poetry.lock
       - pyproject.toml
       - .github/workflows/test.yml
       - .github/workflows/constraints.txt
@@ -16,8 +14,6 @@ on:
     paths:
       - tap_checkly/**
       - tests/**
-      - noxfile.py
-      - poetry.lock
       - pyproject.toml
       - .github/workflows/test.yml
       - .github/workflows/constraints.txt
@@ -26,51 +22,40 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     env:
-      PIP_CONSTRAINT: .github/workflows/constraints.txt
-      NOXSESSION: ${{ matrix.session }}-${{ matrix.python-version }}
       FORCE_COLOR: "1"
+      PIP_CONSTRAINT: .github/workflows/constraints.txt
     strategy:
+      fail-fast: false
       matrix:
+        script: ["test:integration"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         include:
-        - {python-version: "3.10", session: "mypy"}
-        - {python-version: "3.11", session: "tests"}
-        - {python-version: "3.10", session: "tests"}
-        - {python-version: "3.9", session: "tests"}
-        - {python-version: "3.8", session: "tests"}
+        - { script: "test:dependencies", python-version: "3.12" }
+        - { script: "typing:check",      python-version: "3.12" }
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4.1.1
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4.7.1
+    - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: pip
 
     - name: Upgrade pip
       run: |
         pip install pip
         pip --version
 
-    - name: Install Poetry
+    - name: Install Hatch
       run: |
-        pipx install poetry
-        pipx inject poetry poetry-dynamic-versioning[plugin]
-        poetry --version
-        poetry self show plugins
+        pipx install hatch --python "python${{ matrix.python-version }}"
+        hatch --version
 
-    - name: Install Nox
-      run: |
-        pipx install nox
-        pipx inject nox nox-poetry
-        nox --version
-
-    - name: Run Nox
+    - name: Run
       env:
         TAP_CHECKLY_ACCOUNT_ID: ${{ secrets.TAP_CHECKLY_ACCOUNT_ID }}
         TAP_CHECKLY_TOKEN: ${{ secrets.TAP_CHECKLY_TOKEN }}
         TAP_CHECKLY_START_DATE: ${{ secrets.TAP_CHECKLY_START_DATE }}
       run: |
-        nox
+        hatch run ${{ matrix.script }}
