ci: Group GitHub Action dependabot updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,3 +37,7 @@ updates:
       - "edgarrmondragon"
     commit-message:
       prefix: "ci: "
+    groups:
+      actions:
+        patterns:
+          - "*"
