--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
 ]
 dynamic = [
   "version",
@@ -39,7 +40,7 @@ dependencies = [
   "singer-sdk~=0.39.0",
 ]
 optional-dependencies.dev = [
-  "singer-sdk[testing,typing]",
+  "tap-checkly[testing,typing]",
 ]
 optional-dependencies.testing = [
   "deptry>=0.12",
@@ -49,13 +50,18 @@ optional-dependencies.testing = [
 optional-dependencies.typing = [
   "mypy",
 ]
-urls.documentation = "https://github.com/edgarrmondragon/tap-checkly/#readme"
-urls.homepage = "https://github.com/edgarrmondragon/tap-checkly"
-urls.repository = "https://github.com/edgarrmondragon/tap-checkly"
+urls.Documentation = "https://github.com/edgarrmondragon/tap-checkly/#readme"
+urls.Homepage = "https://github.com/edgarrmondragon/tap-checkly"
+urls.Repository = "https://github.com/edgarrmondragon/tap-checkly"
 scripts."tap-checkly" = "tap_checkly.tap:TapCheckly.cli"
 
 [tool.hatch.version]
 source = "vcs"
+
+[tool.hatch.envs.default.overrides]
+env.GITHUB_ACTIONS.dev-mode = { value = false, if = [
+  "true",
+] }
 
 [tool.hatch.envs.sync.scripts]
 console = "tap-checkly {args}"
@@ -68,6 +74,18 @@ features = [
 [tool.hatch.envs.test.scripts]
 integration = "pytest {args:tests}"
 dependencies = "deptry ."
+
+[tool.hatch.envs.all]
+template = "test"
+[[tool.hatch.envs.all.matrix]]
+python = [
+  "3.8",
+  "3.9",
+  "3.10",
+  "3.11",
+  "3.12",
+  "3.13",
+]
 
 [tool.hatch.envs.typing]
 features = [
@@ -124,6 +142,9 @@ DEP002 = [
   "mypy",
   "pytest",
 ]
+
+[tool.pyproject-fmt]
+max_supported_python = "3.13"
 
 [tool.pytest.ini_options]
 addopts = "-vvv"
