--- a/.github/workflows/dynamic-publish.yaml
+++ b/.github/workflows/dynamic-publish.yaml
@@ -29,4 +29,6 @@ jobs:
           name: Packages
           path: dist
       - name: Publish
-        uses: pypa/gh-action-pypi-publish@v1.10.0
+        uses: pypa/gh-action-pypi-publish@v1.10.1
+        with:
+          attestations: true
