--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,11 @@
     "configurations": [
         {
             "name": "tap-checkly",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "program": "tap_checkly",
+            "justMyCode": false,
             "args": [
                 "--config",
                 ".secrets/config.json",
