--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,16 +7,18 @@ on:
       - tap_checkly/**
       - tests/**
       - pyproject.toml
+      - tox.ini
+      - uv.lock
       - .github/workflows/test.yml
-      - .github/workflows/constraints.txt
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
       - tap_checkly/**
       - tests/**
       - pyproject.toml
+      - tox.ini
+      - uv.lock
       - .github/workflows/test.yml
-      - .github/workflows/constraints.txt
   workflow_dispatch:
   schedule:
   # Run weekly on Monday at 12:00 PM UTC
@@ -24,17 +26,17 @@ on:
 
 env:
   FORCE_COLOR: "1"
+  UV_VERSION: "0.6.3"
+  TOX_VERSION: "4.24.1"
+  TOX_UV_VERSION: "1.25.0"
 
 jobs:
   tests:
     runs-on: ubuntu-latest
-    env:
-      FORCE_COLOR: "1"
-      PIP_CONSTRAINT: ${{ github.workspace }}/.github/workflows/constraints.txt
     strategy:
       fail-fast: false
+      max-parallel: 2
       matrix:
-        script: ["test:integration"]
         python-version:
         - "3.9"
         - "3.10"
@@ -42,8 +44,8 @@ jobs:
         - "3.12"
         - "3.13"
         include:
-        - { script: "test:dependencies", python-version: "3.x" }
-        - { script: "typing:check",      python-version: "3.x" }
+        - { environment: "dependencies", python-version: "3.x" }
+        - { environment: "typing",       python-version: "3.x" }
 
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -54,24 +56,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         allow-prereleases: true
-        cache: pip
-
-    - name: Upgrade pip
-      run: |
-        pip install pip
-        pip --version
-
-    - name: Install Hatch
-      run: |
-        pipx install hatch
-        hatch --version
-
+    - uses: astral-sh/setup-uv@f94ec6bedd8674c4426838e6b50417d36b6ab231 # v5.3.1
+      with:
+        version: ${{ env.UV_VERSION }}
     - name: Run
       env:
-        HATCH_PYTHON: ${{ steps.setup-python.outputs.python-path }}
-        HATCH_VERBOSE: "1"
+        UV_PYTHON: ${{ steps.setup-python.outputs.python-path }}
         TAP_CHECKLY_ACCOUNT_ID: ${{ secrets.TAP_CHECKLY_ACCOUNT_ID }}
         TAP_CHECKLY_TOKEN: ${{ secrets.TAP_CHECKLY_TOKEN }}
         TAP_CHECKLY_START_DATE: ${{ secrets.TAP_CHECKLY_START_DATE }}
-      run: |
-        hatch run ${{ matrix.script }}
+      run: >
+        uvx
+        --with tox-uv==${{ env.TOX_UV_VERSION }}
+        --with tox==${{ env.TOX_VERSION }}
+        tox -e ${{ matrix.environment || matrix.python-version }}
