--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,60 +38,27 @@ dynamic = [
 dependencies = [
   "singer-sdk~=0.44.2",
 ]
-optional-dependencies.dev = [
-  "tap-checkly[testing,typing]",
-]
-optional-dependencies.testing = [
-  "deptry>=0.12",
-  "pytest~=8.0",
-  "singer-sdk[testing]",
-]
-optional-dependencies.typing = [
-  "mypy",
-]
 urls.Documentation = "https://github.com/edgarrmondragon/tap-checkly/#readme"
 urls.Homepage = "https://github.com/edgarrmondragon/tap-checkly"
 urls.Repository = "https://github.com/edgarrmondragon/tap-checkly"
 scripts."tap-checkly" = "tap_checkly.tap:TapCheckly.cli"
 
+[dependency-groups]
+dev = [
+  { include-group = "testing" },
+  { include-group = "typing" },
+]
+testing = [
+  "deptry>=0.12",
+  "pytest~=8.0",
+  "singer-sdk[testing]",
+]
+typing = [
+  "mypy",
+]
+
 [tool.hatch.version]
 source = "vcs"
-
-[tool.hatch.envs.default.overrides]
-env.GITHUB_ACTIONS.dev-mode = { value = false, if = [
-  "true",
-] }
-
-[tool.hatch.envs.sync.scripts]
-console = "tap-checkly {args}"
-jsonl = "tap-checkly {args} > tap-checkly.jsonl"
-
-[tool.hatch.envs.test]
-features = [
-  "testing",
-]
-[tool.hatch.envs.test.scripts]
-integration = "pytest {args:tests}"
-dependencies = "deptry ."
-
-[tool.hatch.envs.all]
-template = "test"
-[[tool.hatch.envs.all.matrix]]
-python = [
-  "3.9",
-  "3.10",
-  "3.11",
-  "3.12",
-  "3.13",
-]
-
-[tool.hatch.envs.typing]
-features = [
-  "testing",
-  "typing",
-]
-[tool.hatch.envs.typing.scripts]
-check = "mypy --strict {args:tap_checkly tests}"
 
 [tool.ruff]
 line-length = 88
@@ -156,3 +123,7 @@ ignore_missing_imports = true
 module = [
   "backoff.*",
 ]
+
+[tool.uv]
+prerelease = "allow"
+required-version = ">=0.5.19"
