--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,43 @@ max_supported_python = "3.14"
 [tool.pytest.ini_options]
 addopts = "-vvv"
 
+[tool.tox]
+min_version = "4.22"
+requires = [
+  # renovate: datasource=pypi depName=tox
+  "tox~=4.22",
+  # renovate: datasource=pypi depName=tox-uv
+  "tox-uv~=1.17",
+]
+env_list = [
+  "dependencies",
+  "typing",
+  "3.14",
+  "3.13",
+  "3.12",
+  "3.11",
+  "3.10",
+  "3.9",
+]
+
+[tool.tox.env_run_base]
+runner = "uv-venv-lock-runner"
+pass_env = [ "TAP_CHECKLY_*" ]
+set_env = { "PYO3_USE_ABI3_FORWARD_COMPATIBILITY" = "1" }
+dependency_groups = [ "testing" ]
+commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
+
+[tool.tox.env.dependencies]
+dependency_groups = [ "testing" ]
+commands = [ [ "deptry", "." ] ]
+
+[tool.tox.env.sync]
+commands = [ [ "tap-checkly", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
+
+[tool.tox.env.typing]
+dependency_groups = [ "testing", "typing" ]
+commands = [ [ "mypy", "--strict", { replace = "posargs", default = [ "tap_checkly", "tests" ], extend = true } ] ]
+
 [tool.mypy]
 warn_redundant_casts = true
 warn_unreachable = true
