--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,8 @@ ci:
   autofix_commit_msg: "[pre-commit.ci] auto fixes"
   autoupdate_schedule: monthly
   autoupdate_commit_msg: "chore(deps): pre-commit autoupdate"
+  skip:
+  - uv-lock
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -24,7 +26,7 @@ repos:
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: "v0.11.13"
   hooks:
-  - id: ruff
+  - id: ruff-check
     args: [--fix, --exit-non-zero-on-fix, --show-fixes]
   - id: ruff-format
 
@@ -42,3 +44,9 @@ repos:
     language: python
     additional_dependencies:
     - pyjson5==1.6.9
+
+- repo: https://github.com/astral-sh/uv-pre-commit
+  rev: 0.7.21
+  hooks:
+  - id: uv-lock
+  - id: uv-sync
