--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dynamic = [
 ]
 dependencies = [
   "singer-sdk~=0.53.2",
+  "typing-extensions>=4.15; python_full_version<'3.13'",
 ]
 urls.Documentation = "https://github.com/reservoir-data/tap-checkly/#readme"
 urls.Homepage = "https://github.com/reservoir-data/tap-checkly"
@@ -43,8 +44,13 @@ scripts."tap-checkly" = "tap_checkly.tap:TapCheckly.cli"
 
 [dependency-groups]
 dev = [
+  { include-group = "scripts" },
   { include-group = "testing" },
   { include-group = "typing" },
+]
+scripts = [
+  "requests>=2.32.5",
+  "toolz>=1.1",
 ]
 testing = [
   "deptry>=0.12",
@@ -54,6 +60,8 @@ testing = [
 typing = [
   "mypy>=1.18",
   "ty>=0.0.1a21",
+  "types-requests>=2.32.4.20260107",
+  { include-group = "scripts" },
   { include-group = "testing" },
 ]
 
@@ -62,7 +70,7 @@ source = "vcs"
 
 [tool.uv]
 prerelease = "allow"
-required-version = ">=0.8"
+required-version = ">=0.9.17"
 
 [tool.ruff]
 line-length = 120
@@ -102,13 +110,14 @@ lint.pydocstyle.convention = "google"
 
 [tool.deptry.package_module_name_map]
 mypy = "mypy"
+toolz = "toolz"
 ty = "ty"
+types-requests = "types-requests"
 
 [tool.deptry.per_rule_ignores]
-DEP002 = [
-  "deptry",
-  "mypy",
-  "pytest",
+DEP004 = [
+  "requests",
+  "toolz",
 ]
 
 [tool.pyproject-fmt]
@@ -150,11 +159,13 @@ commands = [ [ "tap-checkly", { replace = "posargs", default = [ "--config=ENV" 
 [tool.tox.env.typing]
 dependency_groups = [ "testing", "typing" ]
 commands = [
-  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_checkly", "tests" ], extend = true } ],
-  [ "ty", "check", { replace = "posargs", default = [ "tap_checkly", "tests" ], extend = true } ],
+  [ "mypy", "tap_checkly", "tests", "scripts" ],
+  [ "ty", "check" ],
 ]
 
 [tool.mypy]
+follow_untyped_imports = true
+strict = true
 warn_redundant_casts = true
 warn_unreachable = true
 warn_unused_configs = true
