--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,8 +123,21 @@ DEP004 = [
 [tool.pyproject-fmt]
 max_supported_python = "3.14"
 
-[tool.pytest.ini_options]
-addopts = "-vvv"
+[tool.pytest]
+addopts = [
+  "-vvv",
+  "-ra",
+  "--strict-config",
+  "--strict-markers",
+]
+filterwarnings = [
+  "error",
+  "once:Fields in transformed catalog but not in records:UserWarning",
+]
+log_level = "INFO"
+minversion = "9"
+xfail_strict = true
+testpaths = [ "tests" ]
 
 [tool.tox]
 min_version = "4.22"
@@ -164,6 +177,7 @@ commands = [
 ]
 
 [tool.mypy]
+enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
 follow_untyped_imports = true
 strict = true
 warn_redundant_casts = true
