--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,9 @@ source = "vcs"
 prerelease = "allow"
 required-version = ">=0.9.17"
 
+[tool.uv.sources]
+singer-sdk = { git = "https://github.com/meltano/sdk.git", rev = "main" }
+
 [tool.ruff]
 line-length = 120
 src = [
